<resources>
    <string name="app_name">2020</string>
    <string name="text_duration">SECONDS</string>
    <string name="text_duration_sub">duration of breaks</string>
    <string name="text_work">MINUTES</string>
    <string name="text_work_sub">interval between breaks</string>
    <string name="button_start">Start breaks</string>
    <string name="button_stop">Stop breaks</string>
    <string name="text_counter">An add will be shown after %d toggles</string>

    <string name="text_performance">YOUR PERFORMANCE</string>
    <string name="text_preferences">MODIFY YOUR BREAKS</string>
    <string name="text_rating_sub">YOUR OVERALL RATING</string>
    <string name="text_total_sub">TOTAL</string>
    <string name="text_completed_sub">COMPLETED</string>
    <string name="text_skipped_sub">SKIPPED</string>

    <string name="text_message">Relax your mind, think about the things that makes you happy</string>
    <string name="text_timeleft_caption">second(s) left</string>
    <string name="button_end_text">Well done! Tap to close.</string>
    <string name="wallpaper_description">Wallpaper header</string>
    <string name="text_ad">This ad helps keep this app free</string>
    <string name="text_start_value">0</string>
</resources>