<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="liteViewModel"
            type="com.shanemaglangit.a2020.lite.LiteViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".lite.LiteFragment">


        <EditText
            android:id="@+id/edit_work"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="numberSigned"
            android:text="@={liteViewModel.work}"
            android:textAlignment="center"
            android:textSize="36sp"
            app:layout_constraintBottom_toTopOf="@+id/edit_duration"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/text_work"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_work"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:labelFor="@id/edit_duration"
            android:text="@string/text_work"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/text_work_sub"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/edit_work" />

        <TextView
            android:id="@+id/text_work_sub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/edit_work"
            android:text="@string/text_work_sub"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/edit_work"
            app:layout_constraintStart_toStartOf="@+id/text_work" />

        <EditText
            android:id="@+id/edit_duration"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="numberSigned"
            android:text="@={liteViewModel.duration}"
            android:textAlignment="center"
            android:textSize="36sp"
            app:layout_constraintBottom_toTopOf="@+id/button_save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/text_duration"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_work" />

        <TextView
            android:id="@+id/text_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:labelFor="@id/edit_duration"
            android:text="@string/text_duration"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/text_duration_sub"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/edit_duration" />

        <TextView
            android:id="@+id/text_duration_sub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/edit_duration"
            android:text="@string/text_duration_sub"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/edit_duration"
            app:layout_constraintStart_toStartOf="@+id/text_duration" />

        <Button
            android:id="@+id/button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_save"
            android:textSize="24sp"
            android:onClick="@{() -> liteViewModel.savePreferences()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.80" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>