<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="restViewModel"
            type="com.shanemaglangit.a2020.rest.RestViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/text_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="128dp"
            android:layout_marginEnd="24dp"
            android:text="@string/text_message"
            android:textAlignment="center"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread_inside" />

        <ProgressBar
            android:id="@+id/progress_time_elapsed"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:max="@{restViewModel.max}"
            android:progress="@{restViewModel.progress}"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/ad_break"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_message" />

        <TextView
            android:id="@+id/text_timeleft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@{restViewModel.timeLeft}"
            android:textSize="18sp"
            android:visibility="visible"
            app:layout_constraintBaseline_toBaselineOf="@+id/text_timeleft_caption"
            app:layout_constraintEnd_toStartOf="@+id/text_timeleft_caption"
            app:layout_constraintHorizontal_chainStyle="packed" />

        <TextView
            android:id="@+id/text_timeleft_caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/text_timeleft_caption"
            android:textSize="18sp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="@+id/progress_time_elapsed"
            app:layout_constraintHorizontal_bias="0.513"
            app:layout_constraintStart_toStartOf="@+id/progress_time_elapsed"
            app:layout_constraintTop_toBottomOf="@+id/progress_time_elapsed" />

        <Button
            android:id="@+id/button_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_done_24px"
            android:onClick="@{() -> restViewModel.closeRest()}"
            android:text="@string/button_end_text"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/ad_break"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_message" />

        <com.google.android.gms.ads.AdView
            android:id="@+id/ad_break"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="32dp"
            app:adSize="MEDIUM_RECTANGLE"
            app:adUnitId="@string/AD_ID"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>